Update PWA Name to Totelepep

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Totelepep Soccer - Live Betting Odds",
+  "name": "Totelepep",
   "short_name": "Totelepep",
   "description": "Real-time football betting odds and match data from Totelepep",
   "start_url": "/",
